apps/downloads/slskd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slskd
  namespace: downloads
  labels:
    app: slskd
    app.kubernetes.io/name: slskd
    app.kubernetes.io/instance: slskd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: slskd
  template:
    metadata:
      labels:
        app: slskd
        app.kubernetes.io/name: slskd
        app.kubernetes.io/instance: slskd
    spec:
      containers:
        - name: slskd
          image: slskd/slskd:0.25.1
          ports:
            - containerPort: 5030
            - containerPort: 50300
          volumeMounts:
            - name: config
              mountPath: /app
            - name: downloads-completed
              mountPath: /downloads/completed
            - name: downloads-incomplete
              mountPath: /downloads/incomplete
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: slskd-config
        - name: downloads-completed
          hostPath:
            path: /downloads/slskd/completed
        - name: downloads-incomplete
          hostPath:
            path: /downloads/slskd/incomplete
            type: DirectoryOrCreate
