apps/downloads/slskd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: slskd
  namespace: downloads
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - slskd.phoenyxlab.xyz
  rules:
    - host: slskd.phoenyxlab.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: slskd
                port:
                  number: 5030
